TFP-6261 Legger til aksjonspunktoppdaterer for fastsett inntekt for arbeid under aap tilfelle- Changes by Ragnhild.Emblem.Holte